--- a/tasks/jetpack-compose/build.gradle
+++ b/tasks/jetpack-compose/build.gradle
@@ -1,21 +1,25 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.0.1'
+        compose_ui_version = "1.5.0-beta03"
+        accompanist_version = "0.31.3-beta"
+        material3_version = "1.1.1"
+        lifecycle_version = "2.6.1"
+        arch_version = "2.2.0"
+        nav_version = "2.6.0"
+        activity_version = "1.7.2"
     }
+
     repositories {
         google()
         mavenCentral()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+plugins {
+    id "com.android.application" version '8.0.2' apply false
+    id "com.android.library" version '8.0.2' apply false
+    id "org.jetbrains.kotlin.android" version "1.8.21" apply false
 }
