--- a/testing/android/build.gradle
+++ b/testing/android/build.gradle
@@ -1,10 +1,17 @@
 buildscript {
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.2.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.4.32' apply false
-}
+    ext {
+        kotlin_version = "1.8.22"
+    }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+/// Top-level build file where you can add configuration options common to all sub-projects/modules.
+plugins {
+    id "com.android.application" version "8.1.0" apply false
+    id "com.android.library" version "8.1.0" apply false
+    id "org.jetbrains.kotlin.android" version "$kotlin_version" apply false
+    id "com.google.devtools.ksp" version "1.8.22-1.0.11" apply false
 }
